force-app/main/default/src/objects/PJN_Mapping__mdt/PJN_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>App: Patient Journey Navigator
Impacted Functionality: Mapping Engine
Purpose: Definition of the mapping type. This is step 2 in setting up the mapping engine.
Metadata Relationship(s): Mapping Job; Mapping Field; Mapping Label; Mapping Date Formula; Mapping Queue; Mapping Record Type
Created by Mavens: Yes</description>
    <label>Mapping</label>
    <pluralLabel>Mappings</pluralLabel>
</CustomObject>