force-app/main/default/src/objects/PJN_Mapping__mdt/fields/PJN_Always_Runs__c.field-meta.xml
<CustomField>
    <fullName>PJN_Always_Runs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Always Runs</label>
    <type>Checkbox</type>
</CustomField>