force-app/main/default/src/objects/PJN_Mapping__mdt/fields/PJN_Mapping_Job__c.field-meta.xml
<CustomField>
    <fullName>PJN_Mapping_Job__c</fullName>
    <label>Mapping Job</label>
    <referenceTo>PJN_Mapping_Job__mdt</referenceTo>
    <relationshipLabel>Mapping</relationshipLabel>
    <relationshipName>PJN_Mappings</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>