force-app/main/default/src/objects/PJN_Mapping__mdt/fields/PJN_Mapping_Type__c.field-meta.xml
<CustomField>
    <fullName>PJN_Mapping_Type__c</fullName>
    <label>Mapping Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PJN_Field</fullName>
                <default>true</default>
                <label>Field</label>
            </value>
            <value>
                <fullName>PJN_Label</fullName>
                <label>Label</label>
            </value>
            <value>
                <fullName>PJN_Queue</fullName>
                <label>Queue</label>
            </value>
            <value>
                <fullName>PJN_Record_Type</fullName>
                <label>Record Type</label>
            </value>
            <value>
                <fullName>PJN_Date_Formula</fullName>
                <label>Date Formula</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>