force-app/main/default/src/objects/PJN_Mapping__mdt/fields/PJN_Source_Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>PJN_Source_Object_API_Name__c</fullName>
    <description>Source Object API Name</description>
    <label>Source Object API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>