force-app/main/default/src/objects/PJN_Mapping__mdt/fields/PJN_Source_Object_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>PJN_Source_Object_Type_Name__c</fullName>
    <description>Source Object Type Name</description>
    <label>Source Object Type Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>