force-app/main/default/src/objects/PJN_Mapping__mdt/listViews/MVN_FR_Creation_Mappings.listView-meta.xml
<ListView>
    <fullName>MVN_FR_Creation_Mappings</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>PJN_Mapping_Job__c</columns>
    <columns>PJN_Mapping_Type__c</columns>
    <columns>PJN_Source_Object_API_Name__c</columns>
    <columns>PJN_Source_Object_Type_Name__c</columns>
    <columns>PJN_Always_Runs__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PJN_Mapping_Job__c</field>
        <operation>equals</operation>
        <value>MVN_EVK_Fulfillment</value>
    </filters>
    <label>FR Creation Mappings</label>
    <language>en_US</language>
</ListView>