force-app/main/default/src/objects/PJN_Mapping__mdt/listViews/PJN_All_Mappings.listView-meta.xml
<ListView>
    <fullName>PJN_All_Mappings</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>PJN_Mapping_Job__c</columns>
    <columns>PJN_Mapping_Type__c</columns>
    <columns>PJN_Source_Object_API_Name__c</columns>
    <columns>PJN_Source_Object_Type_Name__c</columns>
    <columns>PJN_Always_Runs__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Mappings</label>
    <language>en_US</language>
</ListView>